fix color contrast problem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,23 +5,6 @@
 }
 
 /* general */
-body {
-  font-family: "bungee", cursive;
-  background-color: #4285f4;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100vh;
-  gap: 16px;
-  padding: 2rem;
-  overflow-x: hidden;
-  overflow-y: hidden;
-}
-
-main {
-  background-color: #9fa8da;
-  border-radius: 2rem;
-}
 
 h1,
 h2,
@@ -37,6 +20,20 @@ p {
 #result h4 {
   color: #302f2e;
 }
+/*body section*/
+body {
+  font-family: "bungee", cursive;
+  background-color: #0d5fe3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  gap: 16px;
+  padding: 2rem;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
 /* header */
 header {
   height: 2rem;
@@ -49,10 +46,14 @@ header {
 
 header h1 {
   font-size: 2rem;
+  color: #f7f7f7;
 }
 
 /* main content*/
-
+main {
+  background-color: #34367f;
+  border-radius: 2rem;
+}
 main {
   justify-content: center;
   display: flex;
@@ -88,7 +89,7 @@ main {
 #draws {
   margin: 0 10px 0 5px;
 
-  color: white;
+  color: #fff;
 }
 
 .score-count {
@@ -131,6 +132,7 @@ main {
   text-align: center;
   height: 4rem;
   align-items: center;
+  color: #fff;
 }
 
 /*button section for choices*/
@@ -194,7 +196,7 @@ main {
   font-size: 2rem;
 }
 
-#rules-container > h3 {
+#rules-container > h2 {
   color: #302f2e;
   font-size: 2rem;
   line-height: 2.5rem;
@@ -413,9 +415,8 @@ main {
     width: 95%;
   }
 
-  #rules-container > button {
-    padding: 6px;
-    font-size: 1rem;
+  #rules-container > h2 {
+    font-size: 1.5rem;
   }
 
   #rules-container > ul {
@@ -427,6 +428,11 @@ main {
 
   #rules-container > input {
     font-size: 1.3rem;
+  }
+
+  #rules-container > button {
+    padding: 6px;
+    font-size: 1rem;
   }
 
   /*endgame score section*/
